Fixed css for footer not visible properly issue

--- a/includes/partials/_footer.scss
+++ b/includes/partials/_footer.scss
@@ -1,94 +1,85 @@
 @import "./mixins";
-.search-footer{
+.fixed{
     @include footer();
-      ul{
-         margin: 10px;
-          list-style: none;
-          
-         li{
-              font-size: 11px;
-              font-weight: bold;
-              text-transform:uppercase;
-              display: inline-block;
-              padding:0 5px;
-          
-              a{
-                  margin:0;
-                  padding:0;
-                  border: none;
-                  color:#FFFFFF;
-                  text-decoration: none;
-              }
-          }
-      }
-      
-      p{
-          color:white;
-          margin: 5px auto;
-      }
-      
-      p .brand-name{
-          
-          font-size: 16px;
-          color:#0be6af;
-      }
-      
-      p span{
-          color:red;
-      }
+    position: fixed;
+    ul{
+       margin: 10px;
+        list-style: none;
+        
+        li{
+            font-size: 11px;
+            font-weight: bold;
+            text-transform:uppercase;
+            display: inline-block;
+            padding:0 12px;
+            margin: 0;
+        
+            a{
+                margin:0;
+                padding:0;
+                border: none;
+                color:#FFFFFF;
+                text-decoration: none;
+            }
+        }
+    }
+    
+    p{
+        color:white;
+        margin-bottom: 20px;
+        padding-left: 10px;
+    }
+    
+    p .brand-name{
+        
+        font-size: 16px;
+        color:#0be6af;
+    }
+    
+    p span{
+        color:red;
+    }
 }
-footer{
-      display:flex;
-      flex-flow:column;
-      justify-content:center;
-      align-items:center;
-      position: static;
-      bottom: 0%;
-      width: 100%;
-      line-height: 34px;
-      background-color: #1f2024;
-      text-align: center;
-      margin: 0 auto;
-      padding:0;
-      border:0px solid red;
-      
-      ul{
-         margin: 10px;
-          list-style: none;
-          
-          li{
-              font-size: 11px;
-              font-weight: bold;
-              text-transform:uppercase;
-              display: inline-block;
-              padding:0 12px;
-              margin: 0;
-          
-              a{
-                  margin:0;
-                  padding:0;
-                  border: none;
-                  color:#FFFFFF;
-                  text-decoration: none;
+.static{
+        @include footer();
+          position: static;
+          ul{
+             margin: 10px;
+              list-style: none;
+              
+              li{
+                  font-size: 11px;
+                  font-weight: bold;
+                  text-transform:uppercase;
+                  display: inline-block;
+                  padding:0 12px;
+                  margin: 0;
+              
+                  a{
+                      margin:0;
+                      padding:0;
+                      border: none;
+                      color:#FFFFFF;
+                      text-decoration: none;
+                  }
               }
           }
-      }
-      
-      p{
-          color:white;
-          margin-bottom: 20px;
-          padding-left: 10px;
-      }
-      
-      p .brand-name{
           
-          font-size: 16px;
-          color:#0be6af;
-      }
-      
-      p span{
-          color:red;
-      }
+          p{
+              color:white;
+              margin-bottom: 20px;
+              padding-left: 10px;
+          }
+          
+          p .brand-name{
+              
+              font-size: 16px;
+              color:#0be6af;
+          }
+          
+          p span{
+              color:red;
+          }
 }
 
 .single-footer{
